# elastic-collisions

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
demo/: CMakeLists.txt  main.cpp
demo/web/: index.html
docs/: elastic-collisions.js  elastic-collisions.wasm  index.html
elastic-collisions/: CMakeLists.txt  draw.cpp  draw.h  main.cpp  world.cpp  world.h
elastic-collisions/web/: pre.js
